Fix contrast issues

--- a/components/buttons/button-secondary/button-secondary.less
+++ b/components/buttons/button-secondary/button-secondary.less
@@ -26,7 +26,7 @@
 
 .btn-secondary.btn-red-border {
 	border: 1px solid @red;
-	color: @red;
+	color: @black;
 
 	.icon svg path {
 		fill: @red;
@@ -97,7 +97,3 @@
 .btn-secondary.btn-red:hover:enabled {
 	.btn-secondary-hover-state-red;
 }
-
-
-
-
